[package]
name = "modcholesky"
version = "0.1.3"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Modified Cholesky decompositions"
documentation = "https://docs.rs/modcholesky/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/modcholesky"
readme = "README.md"
keywords = ["optimization", "math", "science", "HPC"]
categories = ["science"]
exclude = [ 
	".travis.yml",
	"push_docs",
]

[dependencies]
ndarray = { version = "0.14", features = ["approx"] }
ndarray-linalg = { version = "0.13" }
num = "0.4"
ndarray-rand = "0.13"
rand = "0.8.3"
rand_xorshift = "0.3.0"

[features]
default = []
openblas = ["ndarray-linalg/openblas"]
netlib = ["ndarray-linalg/netlib"]
intel-mkl = ["ndarray-linalg/intel-mkl"]

[dev-dependencies]
approx = "0.4.0"
# needed to run tests
openblas-src = { version = "0.10" }

# [profile.bench]
# debug = true

[badges]
travis-ci = { repository = "argmin-rs/modcholesky", branch = "master" }
maintenance = { status = "passively-maintained" }
