[package]
name = "modcholesky"
version = "0.1.4"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Modified Cholesky decompositions"
documentation = "https://docs.rs/modcholesky/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/modcholesky"
readme = "README.md"
keywords = ["optimization", "math", "science", "HPC"]
categories = ["science"]
exclude = [ 
	"push_docs",
]

[dependencies]
ndarray = { version = "0.16", features = ["approx"] }
num = "0.4"
ndarray-rand = "0.15"
rand = "0.8.3"
rand_xorshift = "0.3.0"

[features]
default = []

[dev-dependencies]
approx = "0.5.0"

# [profile.bench]
# debug = true

[badges]
maintenance = { status = "passively-maintained" }
